--- a/Sort Large File CSV/Sort/Sort.vcxproj
+++ b/Sort Large File CSV/Sort/Sort.vcxproj
@@ -140,6 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="config.h" />
+    <ClInclude Include="ExternalSort.h" />
+    <ClInclude Include="InternalSort.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="ExternalSort.cpp" />
+    <ClCompile Include="InternalSort.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
