--- a/Sort Large File CSV/Sort/Sort.vcxproj.filters
+++ b/Sort Large File CSV/Sort/Sort.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="MinHeap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
